--- a/Assets/WebGLTemplates/ATP_YG1.5.2/index.html
+++ b/Assets/WebGLTemplates/ATP_YG1.5.2/index.html
@@ -731,7 +731,7 @@
 
         function InitPlayer(photoSize, _scopes) {
             try {
-                return ysdk.getPlayer({ scopes: _scopes }).then(_player => {
+                return ysdk.getPlayer({ scopes: true }).then(_player => {
 
                     player = _player;
 
